# pydict2xml

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/convert_dict_xml/: __init__.py  xml2dict.py
src/py_dict_xml/: __init__.py  dict2xml.py
src/pydict2xml/: dict2xml.py  xml2dict.py
tests/: test_dict2xml.py  test_xml2dict.py
