[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convert-dict-xml"
dynamic = ["version"]
description = "Convert Python dicts to XML and back using lxml"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Lalit Patel" },
]
keywords = ["xml", "dict", "lxml", "dict2xml", "xml2dict", "converter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/lalitpatel/convert-dict-xml"
Repository = "https://github.com/lalitpatel/convert-dict-xml"
Issues = "https://github.com/lalitpatel/convert-dict-xml/issues"

[tool.hatch.version]
path = "src/convert_dict_xml/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
